--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,8 @@
-<h1>Artist Search</h1>
+<h1>Home</h1>
 <form action="/artist-search" method="GET">
-    <input type="text" name="artistName" placeholder="Enter artist's name" />
-    <button type="submit">Search</button>
+<div class="form">
+    <label for="artist">Search</label>
+    <input type="text" id="artist" name="artist" placeholder="Search for an artist" />
+    <button type="submit">Search for an artist</button>
+</div>
 </form>
